--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<html>
+<head>
+    <title>Introduction</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body bgcolor="pink">
+    <font size="4" color="white">My Introduction</font>
+    <br>
+    <img src="your-photo.jpg" alt="Your Picture" width="200">
+    <br>
+    <i>Click on the hyperlinks below to learn more about me!</i>
+    <br/>
+    <br>
+    <a href="page2.html">Favorite Books</a>
+    <br>
+    <a href="page3.html">Favorite Movies</a>
+    <br>
+    <a href="page4.html">Top 3 Travel Spots</a>
+    <br/>
+    My name is Tori Thompson. I am a Sophomore at Gonzaga University majoring in Accounting and minoring in Spanish! I'm from Portland,Oregon and I'm a big fan of reading, watching movies, and traveling! I hope you can learn more about me through the linktree I created. 
+
+</body>
+</html>
