--- a/page3.html
+++ b/page3.html
@@ -39,17 +39,17 @@
                 <tr>
                     <td>The Smiths</td>
                     <td>Meat is Murder</td>
-                    <td><img src="c:\Users\vthompson2\Desktop\download.jpg" alt="Meat is Murder Album Cover"></td>
+                    <td><img src="download.jpg" alt="Meat is Murder Album Cover"></td>
                 </tr>
                 <tr>
                     <td>The Weeknd</td>
                     <td>Starboy</td>
-                    <td><img src="c:\Users\vthompson2\Desktop\OIP.jpg" alt="After Hours Album Cover"></td>
+                    <td><img src="\OIP.jpg" alt="After Hours Album Cover"></td>
                 </tr>
                 <tr>
                     <td>Lana Del Rey</td>
                     <td>Ultraviolence</td>
-                    <td><img src="c:\Users\vthompson2\Desktop\71ickPyYGxL._AC_SL1200_.jpg" alt="Born to Die Album Cover"></td>
+                    <td><img src="\71ickPyYGxL._AC_SL1200_.jpg" alt="Born to Die Album Cover"></td>
                 </tr>
             </table>
         </body>
