--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <a href="page2.html">Favorite Books</a>
     <br>
-    <a href="page3.html">Favorite Movies</a>
+    <a href="page3.html">Favorite Artists and Albums</a>
     <br>
     <a href="page4.html">Top 3 Travel Spots</a>
     <br/>
