--- a/page4.html
+++ b/page4.html
@@ -36,15 +36,15 @@
         </tr>
 
             <td>The Galapagos Islands</td>
-            <td><img src="c:\Users\vthompson2\Desktop\galapagos.jpg" alt="The Galapagos Islands on the map"></td>
+            <td><img src="galapagos.jpg" alt="The Galapagos Islands on the map"></td>
         </tr>
         <tr>
             <td>Munich, Germany</td>
-            <td><img src="c:\Users\vthompson2\Desktop\OIF.jpg" alt="Munich on the map"></td>
+            <td><img src="OIF.jpg" alt="Munich on the map"></td>
         </tr>
         <tr>
             <td>St. Maarten</td>
-            <td><img src="c:\Users\vthompson2\Desktop\OIP.jpg" alt="St. Maarten on the map"></td>
+            <td><img src="OIP.jpg" alt="St. Maarten on the map"></td>
         </tr>
     </table>
 </body>
