--- a/page3.html
+++ b/page3.html
@@ -44,12 +44,12 @@
                 <tr>
                     <td>The Weeknd</td>
                     <td>Starboy</td>
-                    <td><img src="\OIP.jpg" alt="After Hours Album Cover"></td>
+                    <td><img src="OIP.jpg" alt="After Hours Album Cover"></td>
                 </tr>
                 <tr>
                     <td>Lana Del Rey</td>
                     <td>Ultraviolence</td>
-                    <td><img src="\71ickPyYGxL._AC_SL1200_.jpg" alt="Born to Die Album Cover"></td>
+                    <td><img src="71ickPyYGxL._AC_SL1200_.jpg" alt="Born to Die Album Cover"></td>
                 </tr>
             </table>
         </body>
