--- a/page3.html
+++ b/page3.html
@@ -44,7 +44,7 @@
                 <tr>
                     <td>The Weeknd</td>
                     <td>Starboy</td>
-                    <td><img src="" alt="After Hours Album Cover"></td>
+                    <td><img src="download.jpg" alt="After Hours Album Cover"></td>
                 </tr>
                 <tr>
                     <td>Lana Del Rey</td>
