--- a/page3.html
+++ b/page3.html
@@ -39,7 +39,7 @@
                 <tr>
                     <td>The Smiths</td>
                     <td>Meat is Murder</td>
-                    <td><img src="download.jpg" alt="Meat is Murder Album Cover"></td>
+                    <td><img src="flat,750x,075,f-pad,750X100,f8f8f8.jpg" alt="Meat is Murder Album Cover"></td>
                 </tr>
                 <tr>
                     <td>The Weeknd</td>
